--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "webparse"
-version = "0.2.2"
+version = "0.2.3"
 edition = "2021"
 authors = [ "tickbh <tickdream125@hotmail.com>" ]
 description = "http1.1/http2 parse http解析库"
 repository = "https://github.com/tickbh/webparse"
 license = "Apache-2.0"
-keywords = ["http1", "http2", "parse", "http"]
+keywords = ["http1", "http2", "websocket", "parse", "http"]
 
 [dependencies]
 log="0.4.19"
