--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "webparse"
-version = "0.2.7"
+version = "0.3.0"
 edition = "2021"
 authors = [ "tickbh <tickdream125@hotmail.com>" ]
 description = "http1.1/http2 parse http解析库"
@@ -9,7 +9,8 @@ license = "Apache-2.0"
 keywords = ["http1", "http2", "websocket", "parse", "http"]
 
 [dependencies]
-log="0.4.19"
-bitflags="2.4"
-lazy_static = "1.4.0"
-base64 = "0.21.4"
+log="0.4.22"
+bitflags="2.6.0"
+lazy_static = "1.5.0"
+base64 = "0.22.1"
+algorithm = "0.1.12"
